# codon-sdk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.docs.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
codex-instructions/: sdk-production-refactor.md
codon-sdk/codon_sdk/schemas/nodespec/: __init__.py
codon-sdk/codon_sdk/schemas/telemetry/spans/: __init__.py
docs/: gen_ref_pages.py
docs/design/: Codon Telemetry Data Schema - MVP Version.txt  Workload builder spec - Codon SDK.pdf:Zone.Identifier  Workload builder spec - Codon SDK.txt  Workload builder spec - Codon SDK.txt:Zone.Identifier
docs/examples/: CodonWorkload_Single_and_Multi_Agent_Examples.ipynb  langgraph-to-codon-workload.ipynb  langgraph_to_codon_workload.ipynb
docs/guides/: codon-workload-quickstart.md  workload-mixin-guidelines.md
docs/public/: building-from-scratch.md  getting-started.md  index.md  what-is-codon.md
docs/public/instrumentation/: index.md  langgraph.md
docs/vision/: codon-workload-design-philosophy.md
instrumentation-packages/codon-instrumentation-langgraph/: AGENTS.md  README.md  pyproject.toml
instrumentation-packages/codon-instrumentation-langgraph/codon/instrumentation/langgraph/: __init__.py  adapter.py  attributes.py  callbacks.py
instrumentation-packages/codon-instrumentation-openai/: AGENTS.md
instrumentation-packages/codon-instrumentation-openai/codon/instrumentation/openai/: __init__.py
sdk/: AGENTS.md  README.md  pyproject.toml
sdk/.github/workflows/: ci.yml
sdk/src/codon_sdk/agents/: __init__.py  codon_workload.py  workload.py
sdk/src/codon_sdk/instrumentation/: config.py  telemetry.py
sdk/src/codon_sdk/instrumentation/schemas/logic_id/: __init__.py
sdk/src/codon_sdk/instrumentation/schemas/nodespec/: __init__.py
sdk/src/codon_sdk/instrumentation/schemas/telemetry/spans/: __init__.py
sdk/src/codon_sdk/llm/: __init__.py
sdk/src/codon_sdk/schemas/nodespec/: __init__.py
sdk/test/: conftest.py
sdk/test/agents/: __init__.py  test_codon_workload.py
sdk/test/instrumentation/: test_initialize_telemetry.py  test_telemetry_payload.py
sdk/test/instrumentation/langgraph/: test_adapter_result.py  test_deprecation_warning.py  test_graph_span.py  test_initialize_reexport.py  test_track_node.py
sdk/test/instrumentation/schemas/nodespec/: test_nodespec.py  test_version.py
sdk/test/instrumentation/schemas/telemetry/spans/: test_spans.py
sdk/test/llm/: test_track_llm.py
src/codon_sdk/schemas/: nodespec.py
src/codon_sdk/schemas/nodespec/: __init__.py
