[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codon-instrumentation-langgraph"
version = "0.1.0a1"
license = "Apache-2.0"
authors = [
  { name="Sheldon Gilbert", email="sheldon@codonops.ai"},
  { name="Martin Arroyo", email="martin@codonops.ai" },
]
description = "Instrumentation package for LangGraph in the Codon ecosystem."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "codon_sdk @ git+https://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@github.com/Codon-Ops/codon-sdk.git#subdirectory=sdk",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
]

[project.urls]
"Homepage" = "https://github.com/your-username/codon-sdk"
"Bug Tracker" = "https://github.com/your-username/codon-sdk/issues"
